fixing the overlap of leaflet controls with nav bar

--- a/Final_Project/final_project.css
+++ b/Final_Project/final_project.css
@@ -53,6 +53,7 @@ p {
 
 /* Map styles */
 #map {
+    z-index: 990;
     height: 60vh;
     width: 85%;
     margin: 20px auto;
